# hue-api

./: .config.json  .gitignore  CMakeLists.txt  Makefile  README.md  config.json
include/: command.h  config.h  console.h  device.h  deviceContainer.h  hue_server_interface.h  stringUtil.h  syncManager.h  task.h  timeUtil.h
src/: .command.h.swp  .main.cpp.swp  Makefile  README.md  command.cpp  command.h  config.cpp  config.h  console.cpp  console.h  device.cpp  device.h  deviceContainer.cpp  deviceContainer.h  hue_server_interface.cpp  main.cpp  smartField.cpp  smartField.h  stringUtil.cpp  syncManager.cpp  syncManager.h  task.cpp  task.h  timeUtil.cpp
src/hue/: device.cpp  device.h  restData.h
src/util/: timeUtil.cpp
